[build-system]
requires = [
    "flit_core >=3.2,<4",
    "pillow >=9.3.0,<10"
]
build-backend = "flit_core.buildapi"

[project]
name = "remote_matrix"
authors = [{name = "Anton Mrosek", email = "pypi@anjomro.de"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/anjomro/Remote-Matrix"
